--- a/src/main/resources/META-INF/workflow-services.yaml
+++ b/src/main/resources/META-INF/workflow-services.yaml
@@ -5,25 +5,91 @@ info:
   version: "1.0"
 servers:
   - url: 'http://localhost:8080'
-paths:
-  /workflow-services/MyInterlokInstance/Channel-1/Workflow-1:
+  paths:
+    /workflow-services/{adapter}/{channel}/{id}:
     post:
-      description: Inject your data directly into any one of your Interlok Workflows.  Simply change the url to your Interlok host, set headers to be mapped into Interlok metadata and POST your body data.
-      requestBody:
-        content:
-          text/plain:
+      consumes:
+        - application/json
+        produces:
+          - application/json
+          - text/xml
+          - text/html
+        parameters:
+          - name: body
+            in: body
+            required: true
             schema:
-              type: string
-            examples:
-              '0':
-                value: Some body
-      responses:
-        '200':
-          description: The resulting message after being processed by your target Interlok workflow.
-          content:
-            text/plain:
-              schema:
-                type: string
-              examples:
-                '0':
-                  value: Some body
+              # Body schema with atomic property examples
+              type: object
+              properties:
+                testapi:
+                  type: object
+                  properties:
+                    adapter:
+                      type: string
+                      example: MyInterlokInstance
+                    channel:
+                      type: string
+                      example: Channel-0000000
+                    id:
+                      type: string
+                      example: Workflow-000000
+                testapiBody:
+                  type: object
+                  properties:
+                    type:
+                      type: object
+                      properties:
+
+
+#      summary: Returns Adapter Information
+#        responses:
+#          "200":
+#            description:  HTML
+
+#      responses:
+#        '200':
+#          description: A JSON object containing Channels and workflows
+#          content:
+#            application/json:
+#              schema:
+#                type: string
+#                 examples:
+#                   '0':
+#                   value: body
+
+
+
+
+#******************************************************************************************
+
+#
+
+
+
+#************************************************************************************************************************
+#
+#
+#    paths:
+#      /workflow-services/{adapter}/channel{unique-id}/id{unique-id}:
+#        post:
+#          description: Inject your data directly into any one of your Interlok Workflows.  Simply change the url to your Interlok host, set headers to be mapped into Interlok metadata and POST your body data.
+#          requestBody:
+#            application/json:
+#            content:
+#              text/plain:
+#                schema:
+#                  type: string
+#                examples:
+#                  '0':
+#                    value: Some body
+#          responses:
+#            '200':
+#              description: The resulting message after being processed by your target Interlok workflow.
+#              content:
+#                text/plain:
+#                  schema:
+#                    type: string
+#                  examples:
+#                    '0':
+#                      value: Some body
