--- a/src/main/resources/META-INF/workflow-services.yaml
+++ b/src/main/resources/META-INF/workflow-services.yaml
@@ -40,6 +40,41 @@ servers:
                     type:
                       type: object
                       properties:
+                      
+    /workflow-services/{adapter}/{channel}/{id}:
+    post:
+      consumes:
+        - application/json
+        produces:
+          - application/json
+          - text/xml
+          - text/html
+        parameters:
+          - name: body
+            in: body
+            required: true
+            schema:
+              # Body schema with atomic property examples
+              type: object
+              properties:
+                testapi:
+                  type: object
+                  properties:
+                    adapter:
+                      type: string
+                      example: MyInterlokInstance
+                    channel:
+                      type: string
+                      example: Channel-0000000
+                    id:
+                      type: string
+                      example: Workflow-000000
+                testapiBody:
+                  type: object
+                  properties:
+                    type:
+                      type: object
+                      properties:
 
 
 #      summary: Returns Adapter Information
