INTERLOK-2372 Now handles open api, by replacing all place holders.

--- a/src/main/resources/META-INF/definition-workflow.yaml
+++ b/src/main/resources/META-INF/definition-workflow.yaml
@@ -20,6 +20,6 @@
                 '0':
                   value: MyMessageResponseContent
       servers:
-        - url: 'http://localhost:8080'
+        - url: 'http://{host}'
     servers:
-      - url: 'http://localhost:8080'
+      - url: 'http://{host}'
