--- a/src/main/resources/META-INF/definition-header.yaml
+++ b/src/main/resources/META-INF/definition-header.yaml
@@ -4,5 +4,5 @@ info:
   description: A REST entry point into your Interlok workflows.
   version: "1.0"
 servers:
-  - url: 'http://localhost:8080'
+  - url: 'http://{host}'
 paths:
