--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,8 @@ configurations {
   all*.exclude group: 'stax', module: 'stax-api'
   all*.exclude group: 'org.codehaus.woodstox'
   all*.exclude group: 'org.eclipse.jetty.orbit', module: 'javax.mail.glassfish'
+  // INTERLOK-3197 exclude old javax.mail
+  all*.exclude group: 'com.sun.mail', module: 'javax.mail'
 }
 
 configurations.all {
