--- a/build.gradle
+++ b/build.gradle
@@ -134,25 +134,27 @@ configurations.all {
 }
 
 dependencies {
-  compile ("com.adaptris:interlok-core:$interlokCoreVersion") { changing= true}
-  compile ("com.adaptris:interlok-common:$interlokCoreVersion") { changing= true}
+  // Since this is all maven now, we should be in a position where SNAPSHOT is auto
+  // regarded as CHANGING...
+  compile ("com.adaptris:interlok-core:$interlokCoreVersion")
+  compile ("com.adaptris:interlok-common:$interlokCoreVersion")
 
-  compile ("com.adaptris:interlok-client-jmx:$interlokCoreVersion") { changing= true}
-  compile ("com.adaptris:interlok-client:$interlokCoreVersion") { changing= true}
-  
-  compile  ("com.adaptris:interlok-cluster-manager:$interlokCoreVersion") { changing= true}
+  compile ("com.adaptris:interlok-client-jmx:$interlokCoreVersion")
+  compile ("com.adaptris:interlok-client:$interlokCoreVersion")
 
-  annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") {changing= true}
+  compile "com.adaptris:interlok-cluster-manager:$interlokCoreVersion", optional
+
+  annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion")
   umlDoclet("nl.talsmasoftware:umldoclet:1.1.4")
 
   testCompile ('junit:junit:4.13')
-  testCompile ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true}
+  testCompile ("com.adaptris:interlok-stubs:$interlokCoreVersion")
   testCompile ("org.mockito:mockito-all:1.10.19")
   testCompile ("org.awaitility:awaitility:4.0.2")
 
-  javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
-  offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar") { changing= true}
-  offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar") { changing= true}
+  javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion")
+  offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar")
+  offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar")
 
 }
 
