--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ ext {
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
   slf4jVersion="1.7.30"
+  log4j2Version = '2.13.3'
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -153,6 +154,11 @@ dependencies {
   testCompile ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing=true }
   testCompile ("org.mockito:mockito-all:1.10.19")
   testCompile ("org.awaitility:awaitility:4.0.3")
+  // INTERLOK-3233 we still need log4j since we're doing MDC stuffs.
+  testCompile ("org.apache.logging.log4j:log4j-core:$log4j2Version")
+  testCompile ("org.apache.logging.log4j:log4j-api:$log4j2Version")
+  testCompile ("org.apache.logging.log4j:log4j-1.2-api:$log4j2Version")
+  testCompile ("org.apache.logging.log4j:log4j-slf4j-impl:$log4j2Version")
 
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion")
   offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar")
