--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,8 @@ dependencies {
   compile ("com.adaptris:interlok-client:$interlokCoreVersion")
 
   compile "com.adaptris:interlok-cluster-manager:$interlokCoreVersion", optional
+  
+  compile "com.adaptris:interlok-monitor-agent:$interlokCoreVersion", optional
 
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion")
   umlDoclet("nl.talsmasoftware:umldoclet:1.1.4")
