INTERLOK-3571 Removed the base set of src files now they have been split.

--- a/interlok-rest-prometheus/build.gradle
+++ b/interlok-rest-prometheus/build.gradle
@@ -5,6 +5,8 @@ ext {
 
 dependencies {
 	compile project(':interlok-rest-base')
+	
+	testCompile project(':interlok-rest-base').sourceSets.test.output
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
