INTERLOK-3575 Completely switched up the project to use micrometer.  Also added tags to metrics. JVM metrics now a thing too.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,7 @@ rootProject.name = 'interlok-workflow-rest-services'
 include 'interlok-rest-base'
 include 'interlok-rest-cluster'
 include 'interlok-rest-health-check'
-include 'interlok-rest-prometheus'
+include 'interlok-rest-provider'
+include 'interlok-rest-provider-prometheus'
+include 'interlok-rest-metrics-jvm'
+include 'interlok-rest-metrics-profiler'
