INTERLOK-3575 Moved the Providers list into the JVM metrics sub-project (after chat with Lewin). Added more JVM stats

--- a/interlok-rest-metrics-profiler/build.gradle
+++ b/interlok-rest-metrics-profiler/build.gradle
@@ -5,7 +5,7 @@ ext {
 
 dependencies {
 	compile project(':interlok-rest-base')
-	compile project(':interlok-rest-provider')
+	compile project(':interlok-rest-metrics-jvm')
 	compile ('io.micrometer:micrometer-registry-prometheus:1.6.3')
 	
 	testCompile project(':interlok-rest-base').sourceSets.test.output
