--- a/interlok-rest-provider-prometheus/build.gradle
+++ b/interlok-rest-provider-prometheus/build.gradle
@@ -5,7 +5,7 @@ ext {
 
 dependencies {
 	compile project(':interlok-rest-base')
-	compile project(':interlok-rest-provider')
+	compile project(':interlok-rest-metrics-jvm')
 	compile ('io.micrometer:micrometer-registry-prometheus:1.6.3')
 	
 	testCompile project(':interlok-rest-base').sourceSets.test.output
