--- a/interlok-rest-base/build.gradle
+++ b/interlok-rest-base/build.gradle
@@ -1,5 +1,6 @@
 ext {
-  componentName='Interlok Rest/Base'
+  componentName='Interlok Management/REST: Base'
+  componentDesc="Common components for Interloks RESTful management components"
   delombokTargetDir = new File("${project.projectDir}/src/main/generated")
 }
 
@@ -48,7 +49,7 @@ publishing {
           artifact sourcesJar { classifier "sources" }
           pom.withXml {
             asNode().appendNode("name", componentName)
-            asNode().appendNode("description", "Common components for Interloks restful services")
+            asNode().appendNode("description", componentDesc)
             def properties = asNode().appendNode("properties")
             properties.appendNode("target", "3.8.3+")
             properties.appendNode("tags", "rest")
