--- a/interlok-rest-health-check/build.gradle
+++ b/interlok-rest-health-check/build.gradle
@@ -1,5 +1,6 @@
 ext {
-  componentName = 'Interlok/REST Health-Check'
+  componentName = 'Interlok Management/REST: Health Check'
+  componentDesc="'Alive/Ready' and general health exposed as a REST endpoint"
   delombokTargetDir = new File("${project.projectDir}/src/main/generated")
 }
 
@@ -48,7 +49,7 @@ publishing {
           artifact sourcesJar { classifier "sources" }
           pom.withXml {
             asNode().appendNode("name", componentName)
-            asNode().appendNode("description", "Interloks health check restful services")
+            asNode().appendNode("description", componentDesc)
             def properties = asNode().appendNode("properties")
             properties.appendNode("target", "3.8.3+")
             properties.appendNode("tags", "rest,health,healthcheck")
