--- a/interlok-rest-metrics-jvm/build.gradle
+++ b/interlok-rest-metrics-jvm/build.gradle
@@ -7,7 +7,8 @@ ext {
 dependencies {
 	compile project(':interlok-rest-base')
 	compile ('io.micrometer:micrometer-registry-prometheus:1.6.3')
-
+	compile ('io.github.mweirauch:micrometer-jvm-extras:0.2.1')
+	
 	testCompile project(':interlok-rest-base').sourceSets.test.output
 }
 
