--- a/interlok-rest-metrics-profiler/build.gradle
+++ b/interlok-rest-metrics-profiler/build.gradle
@@ -7,9 +7,11 @@ ext {
 dependencies {
 	compile project(':interlok-rest-base')
 	compile project(':interlok-rest-metrics-jvm')
+	compile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
 	compile ('io.micrometer:micrometer-registry-prometheus:1.6.6')
 
 	testCompile project(':interlok-rest-base').sourceSets.test.output
+	testCompile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
