Make profiler version separate from coreVersion.

--- a/interlok-rest-metrics-profiler/build.gradle
+++ b/interlok-rest-metrics-profiler/build.gradle
@@ -2,16 +2,17 @@ ext {
   componentName='Interlok Management/REST: Interlok Metrics'
   componentDesc="Collecting internal metrics for exposure"
   delombokTargetDir = new File("${project.projectDir}/src/main/generated")
+  interlokProfilerVersion = project.findProperty('interlokProfilerVersion') ?: interlokCoreVersion
 }
 
 dependencies {
 	compile project(':interlok-rest-base')
 	compile project(':interlok-rest-metrics-jvm')
-	compile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
+	compile ("com.adaptris:interlok-profiler:$interlokProfilerVersion") { changing = true}
 	compile ('io.micrometer:micrometer-registry-prometheus:1.6.6')
 
 	testCompile project(':interlok-rest-base').sourceSets.test.output
-	testCompile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
+	testCompile ("com.adaptris:interlok-profiler:$interlokProfilerVersion") { changing = true}
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
