INTERLOK-3780 Adding Datadog a new metrics provider.

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'interlok-rest-cluster'
 include 'interlok-rest-health-check'
 include 'interlok-rest-provider-prometheus'
 include 'interlok-rest-metrics-jvm'
+include 'interlok-rest-provider-datadog'
 include 'interlok-rest-metrics-profiler'
