--- a/interlok-rest-metrics-profiler/build.gradle
+++ b/interlok-rest-metrics-profiler/build.gradle
@@ -8,10 +8,10 @@ dependencies {
 	compile project(':interlok-rest-base')
 	compile project(':interlok-rest-metrics-jvm')
 	compile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
-	compile ('io.micrometer:micrometer-registry-prometheus:1.6.6')
 
 	testCompile project(':interlok-rest-base').sourceSets.test.output
 	testCompile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
+	testImplementation ('io.micrometer:micrometer-registry-prometheus:1.7.0')
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
