--- a/interlok-rest-metrics-jvm/build.gradle
+++ b/interlok-rest-metrics-jvm/build.gradle
@@ -6,9 +6,9 @@ ext {
 
 dependencies {
 	compile project(':interlok-rest-base')
-	compile ('io.micrometer:micrometer-registry-prometheus:1.6.6')
+	compile ('io.micrometer:micrometer-core:1.7.0')
 	compile ('io.github.mweirauch:micrometer-jvm-extras:0.2.2')
-	
+
 	testCompile project(':interlok-rest-base').sourceSets.test.output
 }
 
