INTERLOK-3796 Get Ready for G7

--- a/interlok-rest-health-check/build.gradle
+++ b/interlok-rest-health-check/build.gradle
@@ -5,7 +5,7 @@ ext {
 }
 
 dependencies {
-	compile project(':interlok-rest-base')
+	api project(':interlok-rest-base')
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
