--- a/interlok-rest-metrics-jvm/build.gradle
+++ b/interlok-rest-metrics-jvm/build.gradle
@@ -5,11 +5,11 @@ ext {
 }
 
 dependencies {
-	compile project(':interlok-rest-base')
-	compile ('io.micrometer:micrometer-core:1.7.1')
-	compile ('io.github.mweirauch:micrometer-jvm-extras:0.2.2')
+	api project(':interlok-rest-base')
+	api ('io.micrometer:micrometer-core:1.7.1')
+	api ('io.github.mweirauch:micrometer-jvm-extras:0.2.2')
 
-	testCompile project(':interlok-rest-base').sourceSets.test.output
+	testImplementation project(':interlok-rest-base').sourceSets.test.output
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
