--- a/interlok-rest-metrics-profiler/build.gradle
+++ b/interlok-rest-metrics-profiler/build.gradle
@@ -5,12 +5,12 @@ ext {
 }
 
 dependencies {
-	compile project(':interlok-rest-base')
-	compile project(':interlok-rest-metrics-jvm')
-	compile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
+	api project(':interlok-rest-base')
+	api project(':interlok-rest-metrics-jvm')
+	api ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
 
-	testCompile project(':interlok-rest-base').sourceSets.test.output
-	testCompile ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
+	testImplementation project(':interlok-rest-base').sourceSets.test.output
+	testImplementation ("com.adaptris:interlok-profiler:$interlokCoreVersion") { changing = true}
 	testImplementation ('io.micrometer:micrometer-registry-prometheus:1.7.1')
 }
 
