--- a/interlok-rest-provider-datadog/build.gradle
+++ b/interlok-rest-provider-datadog/build.gradle
@@ -5,9 +5,9 @@ ext {
 }
 
 dependencies {
-	compile project(':interlok-rest-base')
-	compile project(':interlok-rest-metrics-jvm')
-	compile ('io.micrometer:micrometer-registry-datadog:1.7.1')
+	api project(':interlok-rest-base')
+	api project(':interlok-rest-metrics-jvm')
+	api ('io.micrometer:micrometer-registry-datadog:1.7.1')
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
