--- a/interlok-rest-provider-prometheus/build.gradle
+++ b/interlok-rest-provider-prometheus/build.gradle
@@ -5,11 +5,11 @@ ext {
 }
 
 dependencies {
-	compile project(':interlok-rest-base')
-	compile project(':interlok-rest-metrics-jvm')
-	compile ('io.micrometer:micrometer-registry-prometheus:1.7.1')
+	api project(':interlok-rest-base')
+	api project(':interlok-rest-metrics-jvm')
+	api ('io.micrometer:micrometer-registry-prometheus:1.7.1')
 
-	testCompile project(':interlok-rest-base').sourceSets.test.output
+	testImplementation project(':interlok-rest-base').sourceSets.test.output
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
